syntax = "proto3";

package testbed;

message HelloRequest {
  string value = 1;
  uint32 extra_times = 2;
}

message HelloResponse {
  repeated string values = 1;
}

message HelloStreamResponse  {
  string value = 1;
}

service HelloService {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
  rpc HelloStream(HelloRequest) returns (stream HelloStreamResponse);
}
